--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,9 @@
     }
   ],
   "require": {
-    "php": ">= 7.1",
+    "php": "^7.2",
     "league/flysystem": "^1.0.45",
-    "nette/di": "~2.4.12",
-    "nette/utils": "~2.5.2"
+    "nette/di": "~3.0.0"
   },
   "require-dev": {
     "ninjify/nunjuck": "^0.2.0",
@@ -30,9 +29,17 @@
     "phpstan/phpstan-shim": "^0.11",
     "phpstan/phpstan-strict-rules": "^0.11"
   },
+  "conflict": {
+    "nette/di": "<3.0.0"
+  },
   "autoload": {
     "psr-4": {
       "Contributte\\Flysystem\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\Contributte\\Flysystem\\": "tests"
     }
   },
   "minimum-stability": "dev",
@@ -42,7 +49,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2.x-dev"
+      "dev-master": "0.3.x-dev"
     }
   }
 }
